# floc-simhash

./: LICENSE  README.md  lefthook.yml  pylintrc  pyproject.toml
floc_simhash/: __init__.py
floc_simhash/text/: simhash.py  sorting.py
floc_simhash/transformer/: geometric.py
tests/: conftest.py
tests/text/: test_simhash.py  test_sorting.py
tests/transformer/: test_geometric.py
